# breakpad-android

./: README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jerryzhu/example/breakpaddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/jerryzhu/example/breakpaddemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/jerryzhu/example/breakpaddemo/: ExampleUnitTest.java
breakpadlib/: build.gradle
breakpadlib/src/androidTest/java/com/jerryzhu/example/breakpadlib/: ExampleInstrumentedTest.java
breakpadlib/src/main/: AndroidManifest.xml
breakpadlib/src/main/cpp/: CMakeLists.txt  breakpadlib.cpp
breakpadlib/src/main/cpp/breakpad/: CMakeLists.txt
breakpadlib/src/main/cpp/breakpad/src/common/: convert_UTF.cc
breakpadlib/src/main/java/com/jerryzhu/lib/breakpad/: Breakpad.java
breakpadlib/src/test/java/com/jerryzhu/example/breakpadlib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
